Update footer input padding to try and fix clipped text on Thinkpad.

--- a/src/styles/00_footer.scss
+++ b/src/styles/00_footer.scss
@@ -99,7 +99,7 @@
 
       input {
         @include reset-input;
-        padding-top: get-rem-desktop(1);
+        padding-top: get-rem-desktop(5);
         padding-bottom: get-rem-desktop(10);
         flex: 1;
         min-width: 0;
